# av_trajectory_planning

./: .gitignore  README.md  test.ipynb  test_A_hat.py  test_D_hat.py
docker/: docker-compose.yml  dockerfile  entrypoint_carla.sh
scripts/: load_parquet.py  load_parquet_cc.py  make_plots_video_acc.py  make_plots_video_cc.py  make_sim_video.sh  read_parquet.ipynb  read_parquet.py  read_parquet_acc.ipynb  read_parquet_cc.ipynb  record.sh  requirements.txt  rosbag2parquet.py  rosbag2parquet_cc.py  topics.txt
scripts/topics_lists/: topics_acc.txt  topics_cc.txt
workspace/: all.py  parse_yaw.ipynb  pp.py  record.sh
workspace/carla_examples/: generate_traffic.py
workspace/carla_examples/ros2/: ros2_native.py  stack.json
workspace/src/adas/: CMakeLists.txt  acc_mpc.cpp  cc_mpc.cpp  cc_mpc.hpp  package.xml
workspace/src/adas/config/: cruise_control_params.yaml  params_acc.yaml  params_cc.yaml  params_cc_dummy.yaml  params_lateral_mpc.yaml  params_pp.yaml  params_stanley.yaml  params_steer_test.yaml  plotjuggler_acc.xml  plotjuggler_cc.xml
workspace/src/adas/include/adas/: acc_mpc.hpp  cc_mpc.hpp  controller.hpp  cruise_controller.hpp  lateral_mpc.hpp  limit.hpp
workspace/src/adas/launch/: adaptive_cruise_control.launch.py  adas.launch.py  cruise_control.launch.py
workspace/src/adas/src/: acc_mpc.cpp  acc_node.cpp  adas_node.cpp  cc_mpc.cpp  cc_node.cpp  control_wrapper.cpp  cruise_controller.cpp  lateral_mpc.cpp  lateral_mpc_node.cpp  pp_node.cpp  stanley_node.cpp  steer_test_node.cpp
workspace/src/carla_ros/: package.xml  setup.cfg  setup.py
workspace/src/carla_ros/carla_ros/: carla_ros.py  recorder_node.py  vehicle_node.py  world_node.py
workspace/src/carla_ros/carla_ros/submodules/: transform_3d.py
workspace/src/carla_ros/config/: config.rviz  params.yaml  params_dummy.yaml  params_host.yaml  params_host_lateral_mpc.yaml  params_host_pp.yaml  params_host_stanley.yaml  params_host_steering_test.yaml  params_world.yaml  stack.json  stack_dummy.json  stack_host.json
workspace/src/carla_ros/launch/: adaptive_cruise_control.launch.py  carla_ros.launch.py  cruise_control.launch.py  cruise_control_lateral_mpc.launch.py  cruise_control_pp.launch.py  cruise_control_stanley.launch.py  cruise_control_steer_test.launch.py
workspace/src/carla_ros/maps/: big_straight_highway.xodr  circle.xodr  curve.xodr  straight_highway.xodr
workspace/src/manual_ackerman_control/: package.xml  setup.cfg  setup.py
workspace/src/manual_ackerman_control/config/: params.yaml
workspace/src/manual_ackerman_control/launch/: manual_control.launch.py
workspace/src/manual_ackerman_control/manual_ackerman_control/: main.py
workspace/src/manual_ackermann_control/: package.xml  setup.cfg  setup.py
workspace/src/manual_ackermann_control/launch/: manual_control.launch.py
workspace/src/manual_ackermann_control/manual_ackermann_control/: main.py
workspace/src/no_ros/carla_examples/: tutorial.py
workspace/src/no_ros/carla_examples/ros2/: notebook.ipynb  ros2_native.py  ros2_native.rviz  run_example.sh  run_rviz.sh  stack.json
workspace/src/ros-carla-msgs/: CMakeLists.txt
workspace/src/ros-carla-msgs/msg/: LateralMpcState.msg  PPState.msg  StanleyState.msg
